finishing the outline for lasagna recipe aswell as making folders for different parts of the webstie like images

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
+      <ul>
+       <li> <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">Lasagna Recipe</a>
+        <img
+        src="images/lasagna.webp" alt="Lasagna Picture">
+        </ul>
+
     </body>
 </html>
