updated recipe for Lasagna, however recipe page unable to update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Odin Recipes</h1>
       <ul>
-       <li> <a href="https://www.allrecipes.com/recipe/23600/worlds-best-lasagna/">Lasagna Recipe</a>
+       <li> <a href="pages/recipes/lasagna.html">Lasagna Recipe</a>
         <img
         src="images/lasagna.webp" alt="Lasagna Picture">
         </ul>
