debugged the problem with the Lasagna picture

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <h1>Odin Recipes</h1>
       <ul>
        <li> <a href="pages/recipes/lasagna.html">Lasagna Recipe</a>
-        <img
-        src="images/lasagna.webp" alt="Lasagna Picture">
+        <p><img
+        src="../Odin-recipe/Images/Lasgnarecipe.jpg" alt="Lasagna Picture"> </p
         </ul>
 
     </body>
