no changes made

--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
 
     <body>
         <h1>Odin Recipes</h1>
+<!-- lasagna recipe-->
       <ul>
        <li> <a href="pages/recipes/lasagna.html">Lasagna Recipe</a>
         <p><img
-        src="../Odin-recipe/Images/Lasgnarecipe.jpg" alt="Lasagna Picture"> </p
+        src="../Odin-recipe/Images/Lasgnarecipe.jpg" alt="Lasagna Picture"> </p>
+        <li> <a href="pages/recipe"></a>
+
+        </ul>
+ <!-- Pizza recipe-->
+        <ul>
+         <li> <a href="pages/recipes/pizza.html"> Pizza Recipe </a> 
+          <p><img 
+            src="../Odin-recipe/Images/pizza.jpg" alt="pizza image"> </p>
         </ul>
 
     </body>
