--- a/pages/recipes/pizza.html
+++ b/pages/recipes/pizza.html
@@ -8,6 +8,7 @@
     <body>
         <h1>Pizza Recipe</h1>
         <!-- ingredients for dough.-->
+        <h3>Ingredients</h3>
         <ul>
             <li>1 1/2 cups (355 ml) warm water (105°F-115°F)</li>
             <li>1 package (2 1/4 teaspoons) active dry yeast</li>
@@ -17,8 +18,26 @@
             <li>1 teaspoon sugar </li>
             
         </ul>
+        <h3> Directions</h3>\
+
+            <ol>
+             <li><h3><strong>the yeast:</strong></h3></li>
+
+                <p>Place the warm water in the large bowl of a heavy duty stand mixer.
+                 Sprinkle the yeast over the warm water and let it sit for 5 minutes until the yeast is dissolved.</p>
+                 <p>After 5 minutes stir if the yeast hasn't dissolved completely.
+                 The yeast should begin to foam or bloom, indicating that the yeast is still active and alive.</p>
+                 <p>(Note that if you are using "instant yeast" instead of "active yeast", 
+                    no proofing is required. Just add to the flour in the next step.)</p>
+                    <img
+                    src="../../Images/step1pizza.jpg" alt="yeast mixture picture">
+
+
+                </ol>
+
+        <!--pizza pic-->
         <img
-        src="../../Images/pizza.jpg" alt="pizza picture"></a>"
+        src="../../Images/pizza.jpg" alt="pizza picture"></a>"'
 
     </body>
 </html>
