finished about me website

--- a/index.html
+++ b/index.html
@@ -1,27 +1,80 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>About Abdul Ahad Durrani</title>
+        <link rel="stylesheet"  href="styles.css">
+        <link rel="icon" type="image/jpg" href="../Odin-recipe/Images/About-me.jpg">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
-    </head>
+    </head> 
 
     <body>
-        <h1>Odin Recipes</h1>
-<!-- lasagna recipe-->
-      <ul>
-       <li> <a href="pages/recipes/lasagna.html">Lasagna Recipe</a>
-        <p><img
-        src="../Odin-recipe/Images/Lasgnarecipe.jpg" alt="Lasagna Picture"> </p>
-        <li> <a href="pages/recipe"></a>
+        <div class="header">Abdul Ahad Durrani</div>
 
-        </ul>
- <!-- Pizza recipe-->
-        <ul>
-         <li> <a href="pages/recipes/pizza.html"> Pizza Recipe </a> 
-          <p><img 
-            src="../Odin-recipe/Images/pizza.jpg" alt="pizza image"> </p>
-        </ul>
+        <div class="main">
+
+          <div class="cards">
+
+            <div class="card">
+                <h2>About ME</h2>
+                <p> Hello, my name is Abdul Ahad Durrani and I currently am 17 years old, I wish to become an Automotive Service Technicians through an apprenticeship that will  benefit me alot.</p>
+                <p>I have tons of work experience so that not a problem and my skills and knowledge in this trade even surpass other level one, two, and three technicians. With my knowledge of vehicle maintenance I make the technicians works easier while also solving the dreaded problem many dealers face which is the problem of costumer wait times. it's as simple as that, fast work = reduced costumer wait times.</p>
+                <p>I am originally from Pakistan and I fell in love with this trade in grade 9 when i took my first class in transportation technology.</p>
+                <p>i coded this website to help those who read my resume get answers for questions they may have, not everything is stated here you get the idea, the main and important things are stated here.</p>
+            </div>
+
+            <div class="card">
+                <h2>My Experience</h2>
+                <p>If my resume and cover letter have not fully went over my experience and knowledge in this trade then here I shall explain on that.</p>
+                <p>Lets hop right in, below are a bunch of my experiences in trade and what I have done regarding this trade</p>
+                <ul class="list-of-experience">
+                    <li>4 years of every single Automotive course available in high school</li>
+                    <li>Level one at Centennial College</li>
+                    <li>Markville Ford Lincoln - 1 year</li>
+                    <li>Fenson Auto Service - 2 months</li>
+                    <li>SHSM- Specialist High Skills Major in transportation technology, graduting with a red seal</li>
+                    <li>Award in Transportation Technology</li>
+                </ul>
+                <p>You have to admit that even though I dont have as much experience as say a technician or even a level Three technician but for someone right out of highschool this is very impressive.</p>
+            </div>
+
+            <div class="card">
+                <h2>Certificates/ Acheivments</h2>
+                <p>Some people have marks to show their dedication and hardwork, some people have references that show their dedication and hardwork. but what about me? I personally have references from previous jobs aswell as Certificates. Certificates can't be forged and can only show the truth while marks are a scam and serve no real purpose and references can lie to you. I am not saying that  those are useless but come on certificates speak for themselves. So let me tell you about my certificates (so far).</p>
+                <ul class="certificates">
+                    <li>SHSM red seal- explained before.</li>
+                    <li>Tools In The Trade Boot Camp- We got free tools while also learing skills that will benefit us in the future in the trades as well as networking</li>
+                    <li>Costumer service- we learnt how to deal with costumers and grab their attention and make them loyal to you, earned at Seneca College</li>
+                    <li>Ontario Scholar - Acheiving amazing marks in high school</li>
+                    <li>Dual Credit Scholarship - taking a college level course while in high school</li>
+                    <li>A Bunch of Course certificates- I have gotten certificates for many courses which naming is not benefit but rather it is mentioned in my resume</li>
+                </ul>
+            </div>
+            
+            <div class="card salary">
+                <h2>Expected Salary</h2>
+                <p>Nothing is free in this world which is why me working wont be free either, I want a salary but something that is not too much but reasonable below I will state my Salary and why I would like that. the reasoning is pretty simple and once you talk to me I am certain you will understand aswell</p>
+                <div class="level-one">
+                    <h3>Level One Salary - $19.65/hour</h3>
+                    <p>According to statistics on many websites like Indeed the average salary for Level one apprentice in Ontario is $19.20/hour. which is why I would like the same amount but a little as I have a red seal which entitles me to extra pay.</p>
+                </div>
+                <div class="level-two">
+                    <h3>Level Two Salary - $22.78/hour</h3>
+                    <p>According to statistics on many websites like Indeed the average salary for Level two apprentice in Ontario is $22.78/hour. which is why I would like the same amount but a little as I have a red seal which entitles me to extra pay. Also as a level two technician I am entitled to more pay than a level one technician</p>
+                </div>
+                <div class="level-three">
+                    <h3>Level Three Salary - $25.10/hour</h3>
+                    <p>According to statistics on many websites like Indeed the average salary for Level two apprentice in Ontario is $25.10/hour. which is why I would like the same amount but a little as I have a red seal which entitles me to extra pay. Also as a level three technician I am entitled to more pay than a level two technician</p>
+                </div>
+            </div>
+
+          </div>
+
+        </div>
 
     </body>
 </html>
