--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>You have to admit that even though I dont have as much experience as say a technician or even a level Three technician but for someone right out of highschool this is very impressive.</p>
             </div>
 
-            <div class="card">
+            <div class="card Certificate">
                 <h2>Certificates/ Acheivments</h2>
                 <p>Some people have marks to show their dedication and hardwork, some people have references that show their dedication and hardwork. but what about me? I personally have references from previous jobs aswell as Certificates. Certificates can't be forged and can only show the truth while marks are a scam and serve no real purpose and references can lie to you. I am not saying that  those are useless but come on certificates speak for themselves. So let me tell you about my certificates (so far).</p>
                 <ul class="certificates">
