--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="cards">
 
             <div class="card">
-                <h2>About ME</h2>
+                <h2>About Me</h2>
                 <p> Hello, my name is Abdul Ahad Durrani and I currently am 17 years old, I wish to become an Automotive Service Technicians through an apprenticeship that will  benefit me alot.</p>
                 <p>I have tons of work experience so that not a problem and my skills and knowledge in this trade even surpass other level one, two, and three technicians. With my knowledge of vehicle maintenance I make the technicians works easier while also solving the dreaded problem many dealers face which is the problem of costumer wait times. it's as simple as that, fast work = reduced costumer wait times.</p>
                 <p>I am originally from Pakistan and I fell in love with this trade in grade 9 when i took my first class in transportation technology.</p>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="level-three">
                     <h3>Level Three Salary - $25.10/hour</h3>
-                    <p>According to statistics on many websites like Indeed the average salary for Level two apprentice in Ontario is $25.10/hour. which is why I would like the same amount but a little as I have a red seal which entitles me to extra pay. Also as a level three technician I am entitled to more pay than a level two technician</p>
+                    <p>According to statistics on many websites like Indeed the average salary for Level three apprentice in Ontario is $25.10/hour. which is why I would like the same amount but a little as I have a red seal which entitles me to extra pay. Also as a level three technician I am entitled to more pay than a level two technician</p>
                 </div>
             </div>
 
